--- a/css/layout.css
+++ b/css/layout.css
@@ -177,7 +177,8 @@ input.error,textarea.error{
 			width: 240px;
 			padding: 10px;
 			font-size: 20px;
-			border: 1px solid rgba(255, 0, 0, 0);
+			border: 1px solid rgb(58, 32, 42);
+			background-color: transparent;
 		}
 	.b-popup input[type=submit] {
 		background-color: #7f2e04;
